--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,10 +6,12 @@ spring.datasource.password=letmein
 server.port=8090
 
 otel.propagators=tracecontext
+otel.instrumentation.common.default-enabled=true
 
 otel.resource.attributes.deployment.environment=local
 otel.resource.attributes.service.name=book-service
 otel.resource.attributes.service.namespace=library
+otel.instrumentation.micrometer.enabled=true
 otel.exporter.otlp.logs.endpoint=http://localhost:4318/v1/logs
 otel.exporter.otlp.traces.endpoint=http://localhost:4318/v1/traces
 otel.exporter.otlp.endpoint=http://localhost:4318
